[package]
name = "sim_an"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.11.0"
permutator = "0.4.3"
rayon = "1.7.0"
image = "0.24.6"
[[test]]
name = "validity_check_test.rs"
path = "src/tests/"
